# OCCTViewport

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  DFBrowserWidget.cpp  DFBrowserWidget.h  GlfwOcctView.cpp  GlfwOcctView.h  LICENSE  OCAFWidget.cpp  OCAFWidget.h  README.md  VInspectorWidget.cpp  VInspectorWidget.h  main.cpp  vcpkg.json
clients/python/: .gitignore  README.md  enhanced_geometry_client.py  geometry_client.py  pythonocc_viewer.py  requirements.txt  setup.py  test_session_isolation.py
proto/: geometry_service.proto  geometry_types.proto
src/apps/grpc_viewer/: main.cpp
src/apps/occt_viewer/: main.cpp
src/apps/server/: server_main.cpp
src/client/grpc/: geometry_client.cpp  geometry_client.h
src/client/occt/: OcctRenderClient.cpp  OcctRenderClient.h
src/client/render/: client_main.cpp  mesh_renderer.cpp  mesh_renderer.h  render_client_main.cpp
src/client/ui/: console_panel.cpp  console_panel.h  console_sink.h  console_sink_impl.h  grpc_performance_panel.cpp  grpc_performance_panel.h  logger_manager.cpp  logger_manager.h
src/common/: grpc_performance_monitor.h  utils.cpp  utils.h
src/core/: GlfwOcctView.cpp  GlfwOcctView.h
src/server/: geometry_service_impl.cpp  geometry_service_impl.h
tests/: test_client.cpp
tests/grpc/: model_import_test.cpp  performance_benchmark_test.cpp  real_models_test.cpp  simple_grpc_test.cpp
tests/integration/: server_managed_test.cpp
tests/test_data/models/: bolt.stl
tests/ui/: ui_state_test.cpp
tests/ui_automation/: occt_imgui_ui_tests.cpp
